--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Audiowide"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Sofia"
     />
 
     <title>Smart Drawing Pad</title>
   </head>
   <body>
-    <h1>Draw on the Smart Pad!</h1>
+    <h1>Welcome to the Smart Pad</h1>
+    <p style="margin-top: -20px; max-width: 400px; font-size: 15px">
+      Draw on the pad and our artificially intelligent drawing pad will guess
+      what it is!
+    </p>
+
     <div class="canvas-div">
       <canvas id="canvas"> </canvas>
     </div>
 
     <div class="button-row">
-      <button id="clear-btn" class="button-53">Clear</button>
-      <button id="clear-btn" class="button-53">Clear</button>
+      <button id="clear-btn" class="button-53">CLEAR</button>
+      <button id="undo-btn" class="button-53">UNDO</button>
     </div>
   </body>
   <script src="smartDrawingPad.js"></script>
+  <script src="main.js"></script>
 </html>
