Add highlight and select features from both drawings and chart

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,24 +15,26 @@
     <title>Smart Drawing Pad</title>
   </head>
   <body>
-    <h1>Welcome to the Smart Pad</h1>
-    <p id="subtitle">
-      Draw on the pad and our artificially intelligent drawing pad will guess
-      what it is!
-    </p>
-    <div id="info">
-      <input id="user" type="text" placeholder="Please type your name" />
-      <span id="instructions"></span>
-      <button id="start-btn" class="button-53">START</button>
-    </div>
+    <div class="main">
+      <h1>Welcome to the Smart Pad</h1>
+      <p id="subtitle">
+        Draw on the pad and our artificially intelligent drawing pad will guess
+        what it is!
+      </p>
+      <div id="info">
+        <input id="user" type="text" placeholder="Please type your name" />
+        <span id="instructions"></span>
+        <button id="start-btn" class="button-53">START</button>
+      </div>
 
-    <div class="canvas-div">
-      <canvas id="canvas"> </canvas>
-    </div>
+      <div class="canvas-div">
+        <canvas id="canvas"> </canvas>
+      </div>
 
-    <div class="button-row">
-      <button id="clear-btn" class="button-53">CLEAR</button>
-      <button id="undo-btn" class="button-53">UNDO</button>
+      <div class="button-row">
+        <button id="clear-btn" class="button-53">CLEAR</button>
+        <button id="undo-btn" class="button-53">UNDO</button>
+      </div>
     </div>
   </body>
   <script src="smartDrawingPad.js"></script>
