--- a/frontend/data-visualization.html
+++ b/frontend/data-visualization.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <br /><br /><br />
+    <div id="chartContainer"></div>
     <div id="container"></div>
 
     <script src="../data/dataset/features.js"></script>
     <script src="utils.js"></script>
     <script src="display.js"></script>
+    <script src="./chart/graphics.js"></script>
+    <script src="./chart/math.js"></script>
+    <script src="./chart/chart.js"></script>
 
     <script>
       const { drawingsMetaData, featuresNames } = features;
@@ -22,6 +27,23 @@
         const user = metaData[0].user;
         createRow(user, metaData);
       }
+
+      graphics.generateImages(styles);
+
+      const options = {
+        size: 400,
+        axislabels: featuresNames,
+        styles: styles,
+        transparency: 0.7,
+        icon: "text",
+      };
+
+      const chart = new Chart(
+        chartContainer,
+        drawingsMetaData,
+        options,
+        handleClick
+      );
     </script>
   </body>
 </html>
