--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,32 +11,48 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-
     <title>Smart Drawing Pad</title>
   </head>
+
   <body>
     <div class="main">
-      <h1>Welcome to the Smart Pad</h1>
-      <p id="subtitle">
-        Draw on the pad and our artificially intelligent drawing pad will guess
-        what it is!
-      </p>
-      <div id="info">
-        <input id="user" type="text" placeholder="Please type your name" />
-        <span id="instructions"></span>
-        <button id="start-btn" class="button-53">START</button>
+      <div class="navbar">
+        <ul class="navbar-list">
+          <li class="navbar-item active" id="smartPad-btn">SmartPad</li>
+          <li class="navbar-item" id="contribute-btn">Contribute</li>
+          <li class="navbar-item">About</li>
+          <li role="button" id="navbar-btn">SKETCH!</li>
+        </ul>
       </div>
 
-      <div class="canvas-div">
-        <canvas id="canvas"> </canvas>
+      <div id="smartPad" style="display: block">
+        <div id="smartPadContainer" style="display: none"></div>
+        <div id="chartContainer"></div>
+        <div id="container"></div>
       </div>
 
-      <div class="button-row">
-        <button id="clear-btn" class="button-53">CLEAR</button>
-        <button id="undo-btn" class="button-53">UNDO</button>
+      <div id="contribute" style="display: none">
+        <h1>Welcome to the SmartPad</h1>
+        <p id="subtitle">
+          Draw on the pad and our artificially intelligent drawing pad will
+          guess what it is!
+        </p>
+        <div id="info">
+          <input id="user" type="text" placeholder="Please type your name" />
+          <span id="instructions"></span>
+          <button id="start-btn" class="button-53">START</button>
+        </div>
+        <div id="drawingPadContainer"></div>
       </div>
     </div>
   </body>
-  <script src="smartDrawingPad.js"></script>
+  <script src="../data/dataset/features.js"></script>
+  <script src="utils.js"></script>
+  <script src="display.js"></script>
+  <script src="./chart/graphics.js"></script>
+  <script src="./chart/math.js"></script>
+  <script src="./chart/chart.js"></script>
+  <script src="drawingPad.js"></script>
   <script src="main.js"></script>
+  <script src="data-vis.js"></script>
 </html>
