--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,6 @@
         <ul class="navbar-list">
           <li class="navbar-item active" id="smartPad-btn">SmartPad</li>
           <li class="navbar-item" id="contribute-btn">Contribute</li>
-          <li class="navbar-item">About</li>
           <li role="button" id="navbar-btn">SKETCH!</li>
         </ul>
       </div>
@@ -46,7 +45,7 @@
         </p>
         <div id="contribute-info">
           <input id="user" type="text" placeholder="Please type your name" />
-          <span id="contribute-instructions"></span>
+          <span id="instructions"></span>
           <button id="start-btn" class="button-53">START</button>
         </div>
         <div id="drawingPadContainer"></div>
@@ -63,7 +62,8 @@
   <script src="./utils/math.js"></script>
   <script src="./utils/chart.js"></script>
 
-  <script src="display.js"></script>
-  <script src="drawingPad.js"></script>
+  <script src="pad.js"></script>
+  <script src="smartPadPage.js"></script>
+  <script src="contributePage.js"></script>
   <script src="main.js"></script>
 </html>
