Refactor JS files on the backendd

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,17 +31,23 @@
           <p id="smartPad-subtitle">
             Click on the SKETCH button to draw on the SmartPad. Our intelligent
             SmartPad will guess what it is! Please take it easy as our AI is
-            only trained to guess from the 10 drawings labeled below.
+            only trained to guess from the 10 drawings labeled below. Bellow you
+            can see other users drawings. The chart is made from their drawn
+            samples.
           </p>
           <br /><br /><br />
         </div>
       </div>
 
       <div id="contribute" style="display: none">
-        <h1 id="contribute-h1">Welcome to the SmartPad</h1>
+        <h1 id="contribute-h1">Let's make it better!</h1>
         <p id="contribute-subtitle">
-          Draw on the pad and our artificially intelligent drawing pad will
-          guess what it is!
+          For higher accuracy, we need as many samples as possible to train the
+          SmartPad. Please go through these 10 objects and use your painting
+          skills to draw them. Each person (that's right robots, I see you
+          there!) has unique taste in painting. However, there are features that
+          you just can't leave out, and our smartPad tries its best to find
+          those!
         </p>
         <div id="contribute-info">
           <input id="user" type="text" placeholder="Please type your name" />
