--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,14 +58,14 @@
       </div>
     </div>
   </body>
-  <script src="../data/dataset/minMax.js"></script>
-  <script src="../data/dataset/features.js"></script>
+  <script src="../data/dataset/dataset.js"></script>
 
   <script src="./utils/constants.js"></script>
   <script src="./utils/common.js"></script>
   <script src="./utils/featureFunctions.js"></script>
   <script src="./utils/graphics.js"></script>
   <script src="./utils/math.js"></script>
+  <script src="./utils/display.js"></script>
   <script src="./utils/chart.js"></script>
 
   <script src="pad.js"></script>
