--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
         </ul>
       </div>
 
-      <div id="smartPad" style="display: block">
+      <div id="smartPad" style="display: none">
         <div id="smartPadContainer" style="display: none">
           <div id="predictedLabelContainer"></div>
         </div>
@@ -59,11 +59,12 @@
         <div id="drawingPadContainer"></div>
       </div>
 
-      <div id="testing" style="display: none">
+      <div id="testing" style="display: block">
+        <div id="decisionContainer"></div>
         <div id="testDrawingsContainer">
           <br />
           <h1 id="testing-h1">The accuracy of current method is as follows:</h1>
-          <h4 id="testing-subtitle">41% with blah blah</h4>
+          <h2 id="testing-subtitle"></h2>
           <br /><br /><br />
         </div>
       </div>
@@ -74,14 +75,18 @@
   <script src="../data/dataset/trainingSet.js"></script>
 
   <script src="./utils/constants.js"></script>
+  <script src="./utils/classifiers.js"></script>
   <script src="./utils/common.js"></script>
   <script src="./utils/featureFunctions.js"></script>
   <script src="./utils/graphics.js"></script>
   <script src="./utils/math.js"></script>
   <script src="./utils/display.js"></script>
   <script src="./utils/chart.js"></script>
+  <script src="./utils/dataCleaning.js"></script>
 
   <script src="pad.js"></script>
+  <script src="decisionMatrix.js"></script>
+
   <script src="smartPadPage.js"></script>
   <script src="contributePage.js"></script>
   <script src="testingPage.js"></script>
