--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
         </ul>
       </div>
 
-      <div id="smartPad" style="display: none">
+      <div id="smartPad" style="display: block">
         <div id="smartPadContainer" style="display: none">
           <div id="predictedLabelContainer"></div>
         </div>
@@ -59,7 +59,7 @@
         <div id="drawingPadContainer"></div>
       </div>
 
-      <div id="testing" style="display: block">
+      <div id="testing" style="display: none">
         <div id="decisionContainer"></div>
         <div id="testDrawingsContainer">
           <br />
