--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/navbar.css" />
     <link rel="stylesheet" href="./css/smartPad.css" />
     <link rel="stylesheet" href="./css/contribute.css" />
-    <link rel="stylesheet" href="./css/testing.css" />
 
     <title>Smart Drawing Pad</title>
   </head>
@@ -28,6 +27,12 @@
           <div id="predictedLabelContainer"></div>
         </div>
         <div id="chartContainer"></div>
+
+        <!-- OR -->
+        <div id="decisionContainer" style="display: none"></div>
+
+        <br />
+
         <div id="drawingsContainer">
           <h1 id="smartPad-h1">Welcome to the SmartPad</h1>
           <p id="smartPad-subtitle">
@@ -37,6 +42,13 @@
             can see other users drawings. The chart is made from their drawn
             samples.
           </p>
+
+          <!-- OR -->
+          <h1 id="testing-h1" style="display: none">
+            The accuracy of current method is as follows:
+          </h1>
+          <h2 id="testing-subtitle" style="display: none"></h2>
+
           <br /><br /><br />
         </div>
       </div>
@@ -57,16 +69,6 @@
           <button id="start-btn" class="button-53">START</button>
         </div>
         <div id="drawingPadContainer"></div>
-      </div>
-
-      <div id="testing" style="display: none">
-        <div id="decisionContainer"></div>
-        <div id="testDrawingsContainer">
-          <br />
-          <h1 id="testing-h1">The accuracy of current method is as follows:</h1>
-          <h2 id="testing-subtitle"></h2>
-          <br /><br /><br />
-        </div>
       </div>
     </div>
   </body>
@@ -89,7 +91,6 @@
 
   <script src="smartPadPage.js"></script>
   <script src="contributePage.js"></script>
-  <script src="testingPage.js"></script>
 
   <script src="main.js"></script>
 </html>
