Add complexity feature, fix smartpad feature extraction in real time

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,11 +77,12 @@
   <script src="../data/dataset/trainingSet.js"></script>
 
   <script src="./utils/constants.js"></script>
-  <script src="./utils/classifiers.js"></script>
   <script src="./utils/common.js"></script>
+  <script src="./utils/math.js"></script>
+  <script src="./utils/geometry.js"></script>
+  <script src="./utils/classifiers.js"></script>
   <script src="./utils/featureFunctions.js"></script>
   <script src="./utils/graphics.js"></script>
-  <script src="./utils/math.js"></script>
   <script src="./utils/display.js"></script>
   <script src="./utils/chart.js"></script>
   <script src="./utils/dataCleaning.js"></script>
