Fixed drawing lag version 1, temporarly removed chart update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
         <div id="chartContainer"></div>
 
         <!-- OR -->
-        <div id="decisionContainer" style="display: none"></div>
+        <div id="confusionContainer" style="display: none"></div>
 
         <br />
 
@@ -88,7 +88,7 @@
   <script src="./utils/dataCleaning.js"></script>
 
   <script src="pad.js"></script>
-  <script src="decisionMatrix.js"></script>
+  <script src="confusionMatrix.js"></script>
 
   <script src="smartPadPage.js"></script>
   <script src="contributePage.js"></script>
