Prepare Mongodb, graphql, express on the backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,11 +34,16 @@
         <br />
 
         <div id="drawingsContainer">
-          <h1 id="smartPad-h1">Welcome to the SmartPad</h1>
+          <h1 id="smartPad-h1">
+            Welcome to the SmartPad
+            <button id="change-features">
+              Switch to width and height (2D)
+            </button>
+          </h1>
           <p id="smartPad-subtitle">
             Click on the SKETCH button to draw on the SmartPad. Our intelligent
             SmartPad will guess what it is! Please take it easy as our AI is
-            only trained to guess from the 10 drawings labeled below. Bellow you
+            only trained to guess from the 8 drawings labeled below. Below you
             can see other users drawings. The chart is made from their drawn
             samples.
           </p>
@@ -57,7 +62,7 @@
         <h1 id="contribute-h1">Let's make it better!</h1>
         <p id="contribute-subtitle">
           For higher accuracy, we need as many samples as possible to train the
-          SmartPad. Please go through these 10 objects and use your painting
+          SmartPad. Please go through these 8 objects and use your painting
           skills to draw them. Each person (that's right robots, I see you
           there!) has unique taste in painting. However, there are features that
           you just can't leave out, and our smartPad tries its best to find
