--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,6 +82,7 @@
   <script src="./static/data/testingSet.js"></script>
   <script src="./static/data/trainingSet.js"></script>
 
+  <script src="./utils/config.js"></script>
   <script src="./utils/constants.js"></script>
   <script src="./utils/common.js"></script>
   <script src="./utils/math.js"></script>
@@ -96,8 +97,9 @@
   <script src="pad.js"></script>
   <script src="confusionMatrix.js"></script>
 
+  <script src="graphqlQueries.js"></script>
   <script src="smartPadPage.js"></script>
-  <script type="module" src="contributePage.js"></script>
+  <script src="contributePage.js"></script>
 
   <script src="main.js"></script>
 </html>
