Add Neural Network frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,6 +82,8 @@
   <script src="./static/data/testingSet.js"></script>
   <script src="./static/data/trainingSet.js"></script>
 
+  <script src="../backend/data-engineering/data/models/model.js"></script>
+
   <script src="./utils/config.js"></script>
   <script src="./utils/constants.js"></script>
   <script src="./utils/common.js"></script>
@@ -93,6 +95,7 @@
   <script src="./utils/display.js"></script>
   <script src="./utils/chart.js"></script>
   <script src="./utils/dataCleaning.js"></script>
+  <script src="./utils/network.js"></script>
 
   <script src="pad.js"></script>
   <script src="confusionMatrix.js"></script>
