--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,7 @@
           <div id="predictedLabelContainer"></div>
         </div>
         <div id="chartContainer"></div>
+        <canvas id="networkCanvas"></canvas>
 
         <!-- OR -->
         <div id="confusionContainer" style="display: none"></div>
@@ -84,6 +85,9 @@
 
   <script src="../backend/data-engineering/data/models/model.js"></script>
 
+  <script src="./utils/visualizer.js"></script>
+  <script src="./utils/network.js"></script>
+
   <script src="./utils/config.js"></script>
   <script src="./utils/constants.js"></script>
   <script src="./utils/common.js"></script>
@@ -95,7 +99,6 @@
   <script src="./utils/display.js"></script>
   <script src="./utils/chart.js"></script>
   <script src="./utils/dataCleaning.js"></script>
-  <script src="./utils/network.js"></script>
 
   <script src="pad.js"></script>
   <script src="confusionMatrix.js"></script>
