--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,8 +82,7 @@
   <script src="./static/data/dataset.js"></script>
   <script src="./static/data/testingSet.js"></script>
   <script src="./static/data/trainingSet.js"></script>
-
-  <script src="../backend/data-engineering/data/models/model.js"></script>
+  <script src="./static/data/models/model.js"></script>
 
   <script src="./utils/visualizer.js"></script>
   <script src="./utils/network.js"></script>
