--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,14 +44,12 @@
           <p id="smartPad-subtitle">
             Click on the SKETCH button to draw on the SmartPad. Our intelligent
             SmartPad will guess what it is! Please take it easy as our AI is
-            only trained to guess from the 8 drawings labeled below. Below you
-            can see other users drawings. The chart is made from their drawn
-            samples.
+            only trained to guess from the 8 drawings labeled below. These are other users' drawings.
           </p>
 
           <!-- OR -->
           <h1 id="testing-h1" style="display: none">
-            The accuracy of current method is as follows:
+            The accuracy of the current method is as follows:
           </h1>
           <h2 id="testing-subtitle" style="display: none"></h2>
 
